# video-filter-openmp

./: CMakeLists.txt  README.md  main.cpp  run.sh
Filter/OpenMP/: black_white_omp.cpp  black_white_omp.h  blur_omp.cpp  blur_omp.h  contrast_omp.cpp  contrast_omp.h  edge_detection_omp.cpp  edge_detection_omp.h  filter_omp.cpp  filter_omp.h  sepia_omp.cpp  sepia_omp.h
